--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 	<script src="../libraries/p5.js"></script>
 	<script src="../libraries/p5.dom.js"></script>
 	<script src="../libraries/p5.sound.js"></script>
+	<script src="network.js"></script>
 	<script src="fruit.js"></script>
 	<script src="snake.js"></script>
+	<script src="genericalgorithm.js"></script>
 	<script src="sketch.js"></script>
 
 	<style>
