--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 
 	<title>test_project</title>
 
-	<script src="../libraries/p5.js"></script>
-	<script src="../libraries/p5.dom.js"></script>
-	<script src="../libraries/p5.sound.js"></script>
+	<script src="libraries/p5.js"></script>
+	<script src="libraries/p5.sound.js"></script>
 	<script src="network.js"></script>
 	<script src="fruit.js"></script>
 	<script src="snake.js"></script>
